Fix jumping behavior on small screen in GRID version

--- a/gridVersion/styles/style.scss
+++ b/gridVersion/styles/style.scss
@@ -59,7 +59,7 @@
    }
    &_less {
       img {
-         width: 90%;
+         width: 44%;
          height: 90%;
          object-fit: contain;
       }
